--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,7 @@
+🔥 Pterodactyl Command Docker By Ryuuzyy 😈
+
+⟩ - - - Isi File docker-compose.yml : - - - ⟨
+
 version: '3.8'
 x-common:
   database:
@@ -78,3 +82,13 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
+
+⟩ - - - First Command Root APT :  - - - ⟨
+- sudo apt update
+- sudo apt upgrade -y
+
+⟩ - - - Run File Docker :  - - - ⟨
+- docker-compose up -d
+
+⟩ - - - Create User Panel : - - - ⟨
+- docker-compose run --rm panel php artisan p:user:make
